Finish workflow handling
